--- a/src/ActionFramework.App/project.json
+++ b/src/ActionFramework.App/project.json
@@ -2,7 +2,9 @@
   "version": "0.1.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "Microsoft.DotNet.ProjectModel": "1.0.0-rc4-003206",
+    "NETStandard.Library": "1.6.1",
+    "Newtonsoft.Json": "9.0.1"
   },
 
   "frameworks": {
