--- a/src/Apps/HelloWorld/project.json
+++ b/src/Apps/HelloWorld/project.json
@@ -2,7 +2,7 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "ActionFramework": "1.0.0-*",
+    "ActionFramework.App": "1.0.0-*",
     "NETStandard.Library": "1.6.1"
   },
 
